--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="description" content="Weather App">
+	<meta name="description" content="Wiki-viewer">
 	<meta name="author" content="Amor Kumar">
 
-	<title>Weather App</title>
+	<title>Wiki Viewer</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,51 +19,15 @@
 
 </head>
 
-<body id="bg" class="welcome">
+<body>
 
-	<div id="content" class="container-fluid">
-
-		<div class="row">
-					<div id="weatherBox" class="col-sm-4 col-sm-offset-4 text-center">
-
-						<div class="row weatherBoxRow">
-
-							<div class="col-sm-12">
-								<p class="date text-light"></p>
-							</div>
-
-							<div class="col-sm-12">
-								<p class="location text-light"></p>
-							</div>
-
-							<div class="col-sm-12">
-								<a class="icon text-light" data-icon=""></a>
-							</div>
-
-							<div class="col-sm-12">
-								<p class="temperature h1 text-light"></p>
-							</div>
-
-							<div class="col-sm-12">
-								<p onClick="getLocation()" id="button" class="getWeather details h2 text-light">Click here for the current weather</p>
-							</div>
-
-						</div>
-
-				</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12 settingsContainer">
-				<p class="settings text-light"><span onClick="toFarenheit()" class="unitToggle">&deg; F </span>&nbsp;|&nbsp; <span onClick="getLocation()" class="glyphicon glyphicon-refresh"></span></p>
-			</div>
-		</div>
-	</div>
+	<h1>wiki-viewer</h1>
 
 	<!-- Bootstrap core JavaScript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/weather.js"></script>
+	<script src="js/wiki-viewer.js"></script>
 
 </body>
 </html>
